fixed some minor alignment issues

--- a/wedding/static/css/wedding.css
+++ b/wedding/static/css/wedding.css
@@ -49,7 +49,7 @@ a:hover {
 }
 
 #navigation {
-    margin: 30px 0 30px 0;
+    margin: 30px 0 30px 20px;
     font-size: 18px;
 }
 
@@ -57,13 +57,17 @@ a:hover {
     list-style: none;
     margin: 0 auto;
     padding: 0;
-    width: 670px;
+    width: 630px;
 }
 
 #navigation ul li {
     float: left;
     display: block;
     margin-right: 40px;
+}
+
+#navigation ul li.last {
+    margin: 0px;
 }
 
 #buildings {
